plugins {
    id 'application'
}

group = 'telegram.bot'
version = '0.2.30'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.codeborne:selenide:7.6.1'
    implementation 'org.telegram:telegrambots:6.3.0'
    implementation 'com.google.guava:guava:30.1-jre'
    implementation 'com.google.code.gson:gson:2.10'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
}

java {
    sourceCompatibility = "21"
    targetCompatibility = "21"
}

application {
    mainClass = 'telegram.bot.Main'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'telegram.bot.Main',
                'Implementation-Version': version
        )
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it)}
    }
}

tasks.named('test') {
    useJUnitPlatform()
}